// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-checkbox-group renders 1`] = `
<rux-checkbox-group>
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="hidden rux-label" part="label">
        <slot name="label"></slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
</rux-checkbox-group>
`;

exports[`rux-checkbox-group renders label prop 1`] = `
<rux-checkbox-group label="hello">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-label" part="label">
        <slot name="label">
          hello
        </slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
</rux-checkbox-group>
`;

exports[`rux-checkbox-group renders label slot 1`] = `
<rux-checkbox-group>
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-label" part="label">
        <slot name="label"></slot>
      </div>
      <div class="rux-checkbox-group" part="container">
        <slot></slot>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
</rux-checkbox-group>
`;
